# gallery.doktortakes.photos

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  Dockerfile  LICENSE  Pipfile  README.md  deploy.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-services.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run-celery.staging.sh  run.dev.sh  run.production.sh  run.staging.sh  tasks.py  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
api/: manage.py  pyproject.toml
api/config/: config.production.toml  config.staging.toml
api/photos/: apps.py  middleware.py  settings_django.py  settings_photos.py  storage_backends.py  urls.py  views.py  wsgi.py
api/photos/admin/: __init__.py  album.py  creator.py  file.py  license.py  photo.py  request.py  tagline.py  taxon.py  thumbnail.py
api/photos/api/: fields.py  urls.py
api/photos/api/serializers/: __init__.py  album.py  hero_photo.py  photo.py  photo_taxon.py  tag.py  thumbnail.py
api/photos/api/views/: __init__.py  album.py  external_album.py  tag.py  tagline.py  user.py  validation.py
api/photos/api/views/manage/: __init__.py  album.py  group.py  license.py  photo.py  photo_taxon.py  taxon.py  thumbnail.py  user.py
api/photos/management/commands/: create_default_superuser.py
api/photos/management/commands/archive/: utils.py
api/photos/migrations/: 0001_initial.py  0002_album_type.py  0003_photo_placeholder_color.py  0004_album_thumbnail.py  0005_alter_photo_exif.py  0006_tag_namespace.py  0007_alter_album_type.py  0008_creator_photo_description_photo_creator.py  0009_alter_thumbnail_image.py  0010_request.py  0011_alter_request_options_and_more.py  0012_alter_request_created_at.py  0013_delete_tagline.py  0014_request_user.py  0015_alter_photo_options_photo_order.py
api/photos/models/: __init__.py  album.py  file.py  request.py  tag.py  tagline.py
api/photos/models/photo/: creator.py  photo.py  thumbnail.py
api/photos/templates/: base.html
api/photos/templates/errors/: 404.html
api/photos/templates/widgets/: json.html
api/photos/tests/api/: test_AlbumDetail.py  test_AlbumList.py  test_ManageAlbumDetail.py  test_ManageAlbumDetailPermissions.py
api/photos/utils/: __init__.py  image.py  query.py
auth/: fields.py  forms.py  settings.py  urls.py  utils.py  views.py
config/: .gitignore  config.staging.toml  (+1 more)
(+680 files in other folders)
