[tool.poetry]
name = "doktortakes.photos"
version = "0.1.0"
description = ""
authors = ["Doktor <doktorthehusky@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
Django = "2.2.24"
django-storages = "1.7.1"
djangorestframework = "3.10.2"
django-mptt = "0.11.0"
django-webpack-loader = "0.7.0"
psycopg2-binary = "2.8.6"
toml = "0.10.1"
invoke = "1.4.1"
ExifRead = "2.3.1"
celery = {version = "5.0.0", extras = ["redis"]}
Pillow = "8.0.0"
lxml = "4.5.2"
boto3 = "1.9.5"
pytz = "2020.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.1.1"
django-debug-toolbar-request-history = "0.1.3"
factory-boy = "2.12.0"
Faker = "2.0.0"
pytest = "5.1.0"
pytest-django = "3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
