[tool.poetry]
name = "gallery.doktortakes.photos"
version = "0.1.0"
description = ""
authors = ["Doktor <doktorthehusky@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Django = "3.2"
django-storages = "^1.12.3"
djangorestframework = "3.13.1"
django-mptt = "0.11.0"
django-webpack-loader = "1.4.1"
psycopg2-binary = "2.9.3"
toml = "0.10.2"
invoke = "1.7.0"
ExifRead = "2.3.2"
Pillow = "9.1.0"
lxml = "4.8.0"
boto3 = "^1.21.33"
pytz = "2022.1"
gunicorn = "20.1.0"
whitenoise = {version = "6.0.0", extras = ["brotli"]}

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2.4"
django-debug-toolbar-request-history = "0.1.4"
factory-boy = "2.12.0"
Faker = "2.0.0"
pytest = "^7.1.2"
pytest-django = "3.5.1"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
